src/Compilers/Test/Resources/Core/MetadataTests/Invalid/ClassLayout.il

//  Microsoft (R) .NET Framework IL Disassembler.  Version 4.0.30319.17626



// Metadata version: v4.0.30319
.assembly extern mscorlib
{
  .publickeytoken = (B7 7A 5C 56 19 34 E0 89 )                         // .z\V.4..
  .ver 4:0:0:0
}
.assembly b
{
  .custom instance void [mscorlib]System.Runtime.CompilerServices.CompilationRelaxationsAttribute::.ctor(int32) = ( 01 00 08 00 00 00 00 00 ) 
  .custom instance void [mscorlib]System.Runtime.CompilerServices.RuntimeCompatibilityAttribute::.ctor() = ( 01 00 01 00 54 02 16 57 72 61 70 4E 6F 6E 45 78   // ....T..WrapNonEx
                                                                                                             63 65 70 74 69 6F 6E 54 68 72 6F 77 73 01 )       // ceptionThrows.
  .hash algorithm 0x00008004
  .ver 0:0:0:0
}
.module b.dll
// MVID: {9602E904-A118-45CA-A74A-37A00531EABC}
.imagebase 0x10000000
.file alignment 0x00000200
.stackreserve 0x00100000
.subsystem 0x0003       // WINDOWS_CUI
.corflags 0x00000001    //  ILONLY
// Image base: 0x00800000


// =============== CLASS MEMBERS DECLARATION ===================

.class public sequential ansi sealed beforefieldinit S1
       extends [mscorlib]System.ValueType
{
  .pack 0x1                                                                        // modified in binary editor to be 0xffff (ilasm doesn't allow 0xffff)
  .size 0xaaaaaaaa
} // end of class S1

.class public explicit ansi sealed beforefieldinit S2
       extends [mscorlib]System.ValueType
{
  .pack 2
  .size 0xbbbbbbbb                                                                 // modified in binary editor to be 0xffffffff (ilasm writes 0 instead of 0xffffffff)
} // end of class S2

.class public sequential ansi sealed beforefieldinit S3
       extends [mscorlib]System.ValueType
{
  .pack 2
  .size 1
} // end of class S3

.class public sequential ansi sealed beforefieldinit S4                             
       extends [mscorlib]System.ValueType
{
  .pack 0
  .size 0x12345678 
} // end of class S4

.class public sequential ansi sealed beforefieldinit S5
       extends [mscorlib]System.Object
{
   
} // end of class S5


// =============================================================

// *********** DISASSEMBLY COMPLETE ***********************
// WARNING: Created Win32 resource file b.res
